force-app/main/default/objects/Appeal__c/Appeal__c.object-meta.xml
<CustomObject>
    <description>object for up-sell appeals and other commission related appeal events</description>
    <label>Commission Appeals</label>
    <nameField>
        <label>Appeal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Appeals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>