force-app/main/default/objects/Appeal__c/fields/Already_Being_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Already_Being_Processed_Date__c</fullName>
    <label>Already Being Processed Date</label>
    <type>DateTime</type>
</CustomField>