force-app/main/default/objects/Appeal__c/fields/Appeal_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Reference_ID__c</fullName>
    <formula>Appeal_Unique_ID__c &amp; &quot;-&quot; &amp; Commissions_Calendar_Period__c &amp; &quot;-&quot; &amp; Opportunity__r.Owner_Last_Name__c &amp; &quot;-&quot; &amp; TEXT(Appeal_Submission_Attempts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appeal Reference ID</label>
    <type>Text</type>
</CustomField>