force-app/main/default/objects/Appeal__c/fields/Appeal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Stage__c</fullName>
    <label>Appeal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledge receipt</fullName>
                <default>true</default>
                <label>Acknowledge receipt</label>
            </value>
            <value>
                <fullName>Request more information</fullName>
            </value>
            <value>
                <fullName>Already being processed</fullName>
            </value>
            <value>
                <fullName>Under review</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>No Action Necessary</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Past 60-day Review Limit</fullName>
            </value>
            <value>
                <fullName>Update Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>