force-app/main/default/objects/Appeal__c/fields/Appeal_Submission_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Submission_Attempts__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Appeal Submission Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>