force-app/main/default/objects/Appeal__c/fields/Appeal_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Unique_ID__c</fullName>
    <displayFormat>A-{00000}</displayFormat>
    <label>Appeal Unique ID</label>
    <type>AutoNumber</type>
</CustomField>