force-app/main/default/objects/Appeal__c/fields/Assigned_Commission_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Commission_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>commissions accounting rep responsible for this appeal</description>
    <label>Assigned Commission Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appeals</relationshipName>
    <type>Lookup</type>
</CustomField>