force-app/main/default/objects/Appeal__c/fields/Commissions_Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Calendar_Period__c</fullName>
    <formula>IF( 
ISPICKVAL(Service_Line_Commission_Category__c ,&quot;Data Protection&quot;), DP_Eligible_Commission_Month__c , RM_Eligible_Commission_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Calendar Period</label>
    <type>Text</type>
</CustomField>