force-app/main/default/objects/Appeal__c/fields/Email_CC_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_Address__c</fullName>
    <formula>CASE( Sales_District__c , 
&quot;Atlantic&quot;, &quot;atlanticcommissions@ironmountain.com&quot;, 
&quot;Northern/Canada&quot;, &quot;NCANcommissions@ironmountain.com&quot;, 
&quot;Southern&quot;, &quot;southerncommissions@ironmountain.com&quot;, 
&quot;Southwest&quot;, &quot;southwestcommission@ironmountain.com&quot;, 
&quot;sean.oriley@ironmountain.com&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email CC Address</label>
    <type>Text</type>
</CustomField>