force-app/main/default/objects/Appeal__c/fields/Opportunity_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Booked_Date__c</fullName>
    <formula>Opportunity__r.IM_Booked_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Booked Date</label>
    <type>Date</type>
</CustomField>