force-app/main/default/objects/Appeal__c/fields/Opportunity_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18_digit__c</fullName>
    <formula>Opportunity__r.Record_ID_18_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID (18 digit)</label>
    <type>Text</type>
</CustomField>