force-app/main/default/objects/Appeal__c/fields/Opportunity_Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sales_Stage__c</fullName>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sales Stage</label>
    <type>Text</type>
</CustomField>