force-app/main/default/objects/Appeal__c/fields/Opportunity_Stage_6_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_6_Entered_Date__c</fullName>
    <formula>Opportunity__r.IM_Stage_6_Entered_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage 6 Entered Date</label>
    <type>Date</type>
</CustomField>