force-app/main/default/objects/Appeal__c/fields/Opportunity_Total_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total_Annual_Revenue__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Total Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>