force-app/main/default/objects/Appeal__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Commission Accounting Action</fullName>
            </value>
            <value>
                <fullName>Submitted for Payment</fullName>
            </value>
            <value>
                <fullName>Pending Commission review</fullName>
            </value>
            <value>
                <fullName>To be included in current commission cycle</fullName>
            </value>
            <value>
                <fullName>To be included in next commission cycle</fullName>
            </value>
            <value>
                <fullName>Added to upsell file as “Pending Billing”</fullName>
            </value>
            <value>
                <fullName>Need further information</fullName>
            </value>
            <value>
                <fullName>Already in an open Commission window</fullName>
            </value>
            <value>
                <fullName>Extension required</fullName>
            </value>
            <value>
                <fullName>Paid Previously</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>