force-app/main/default/objects/Appeal__c/fields/RM_Eligible_Commission_Month__c.field-meta.xml
<CustomField>
    <fullName>RM_Eligible_Commission_Month__c</fullName>
    <formula>IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 1, 3) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 1, 29)) , 
&quot;January 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 1, 29) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 2, 26 ) ), 
&quot;February 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 2, 26) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 3, 26)) , 
&quot;March 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 3, 26) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 4, 23)) , 
&quot;April 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 4, 23) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 5, 28) ), 
&quot;May 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 5, 28) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 6, 25)) , 
&quot;June 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 6, 25) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 7, 23)) , 
&quot;July 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 7, 23) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 8, 27)) , 
&quot;August 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 8, 27) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 9, 24)) , 
&quot;September 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 9, 24) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 10, 29)) , 
&quot;October 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 10, 29) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 11, 25)) , 
&quot;November 13&quot;, 
IF( 
AND( 
Eligible_Commission_Date__c &gt; DATE(2013, 11, 25) , 
Eligible_Commission_Date__c &lt;= DATE(2013, 12, 24)) , 
&quot;December 13&quot;, 

&quot;Date not specified&quot; 
))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Eligible Commission Month</label>
    <type>Text</type>
</CustomField>