force-app/main/default/objects/Appeal__c/fields/Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division__c</fullName>
    <formula>Opportunity__r.Sales_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Division</label>
    <type>Text</type>
</CustomField>