force-app/main/default/objects/Appeal__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>Opportunity__r.Sales_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>