force-app/main/default/objects/Appeal__c/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <formula>Opportunity__r.Sales_Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Territory</label>
    <type>Text</type>
</CustomField>