force-app/main/default/objects/Appeal__c/fields/Under_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Under_Review_Date__c</fullName>
    <label>Under Review Date</label>
    <type>DateTime</type>
</CustomField>