force-app/main/default/objects/Appeal__c/fields/Up_Sell_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Up_Sell_Account_ID__c</fullName>
    <formula>Opportunity__r.IM_Up_Sell_Sold_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up Sell Account ID</label>
    <type>Text</type>
</CustomField>