force-app/main/default/objects/Appeal__c/fields/Up_Sell_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Up_Sell_Quantity__c</fullName>
    <formula>Opportunity__r.IM_Up_Sell_Quantity__c</formula>
    <label>Up Sell Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>