force-app/main/default/objects/Appeal__c/fields/Up_Sell_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Up_Sell_Unit_of_Measure__c</fullName>
    <formula>TEXT(  Opportunity__r.IM_Unit_of_Measure__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up Sell Unit of Measure</label>
    <type>Text</type>
</CustomField>