force-app/main/default/objects/Appeal__c/recordTypes/Locked_Layout.recordType-meta.xml
<RecordType>
    <fullName>Locked_Layout</fullName>
    <active>true</active>
    <description>Accepted and Denied Appeals will be locked</description>
    <label>Locked Layout</label>
</RecordType>