force-app/main/default/objects/Appeal__c/recordTypes/NA_Up_Sell_Appeal.recordType-meta.xml
<RecordType>
    <fullName>NA_Up_Sell_Appeal</fullName>
    <active>true</active>
    <description>Used when submitting an up sell appeal for the finance and commissions team to review</description>
    <label>NA Up Sell Appeal</label>
</RecordType>