force-app/main/default/objects/Appeal__c/validationRules/Accept_Denied_Require_Support_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Accept_Denied_Require_Support_Notes</fullName>
    <active>true</active>
    <description>Accepted and denied appeals must have a value in the decisions support notes field</description>
    <errorConditionFormula>AND( 
ISCHANGED(Appeal_Stage__c), 
OR( 
ISPICKVAL(Appeal_Stage__c, &quot;Denied&quot;), 
ISPICKVAL(Appeal_Stage__c, &quot;Accepted&quot;) 
), 
ISBLANK( Decision_Support_Notes__c ) 
)</errorConditionFormula>
    <errorMessage>Accepted and Denied requests must have decision support notes.</errorMessage>
</ValidationRule>