force-app/main/default/objects/Appeal__c/validationRules/Accepted_Appeal_Must_have_Payment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Appeal_Must_have_Payment_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Appeal_Stage__c , &quot;Accepted&quot;) ,
ISBLANK( TEXT( Payment_Status__c )) ,
NOT(ISBLANK(PRIORVALUE(Payment_Status__c)))
)</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>Accepted appeals must have a payment status.</errorMessage>
</ValidationRule>