force-app/main/default/objects/Appeal__c/validationRules/Accepted_Deals_Cannot_be_Resubmitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Deals_Cannot_be_Resubmitted</fullName>
    <active>true</active>
    <description>Resubmit button is available on the locked layout for accepted and rejected, resubmits should only be for denies, this enforces that</description>
    <errorConditionFormula>AND(
ISPICKVAL( PRIORVALUE(Appeal_Stage__c) , &quot;Accepted&quot;) ,
ISPICKVAL(Appeal_Stage__c, &quot;Resubmitted&quot;)
)</errorConditionFormula>
    <errorMessage>Accepted dealds cannot be resubmitted.</errorMessage>
</ValidationRule>