force-app/main/default/objects/Appeal__c/validationRules/Appeal_Stage_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Appeal_Stage_Edit</fullName>
    <active>true</active>
    <description>Only admins, commissions and sales ops/finance is permitted to adjust the  stage. Stage is editable so resubmit button can update the stage.</description>
    <errorConditionFormula>OR( 
/* fire for new appeals created in a stage other than &apos;Acknowledge Receipt&apos; */ 
AND( 
ISNEW(), 
NOT(ISPICKVAL(Appeal_Stage__c, &quot;Acknowledge Receipt&quot;)) 
) , 

/* fire for open appeals edited by someone not enabled to do so */ 
AND( 
NOT(ISNEW()), 
ISCHANGED(Appeal_Stage__c),
NOT(ISPICKVAL(PRIORVALUE(Appeal_Stage__c), &quot;Denied&quot;)), 
$Profile.Name &lt;&gt; &quot;IM_Commissions&quot;,
$Profile.Name &lt;&gt; &quot;IM_Sales Ops&quot; , 
$Profile.Name &lt;&gt; &quot;IM_Sales Ops Super User&quot; , 
$Profile.Name &lt;&gt; &quot;IM_Sales_Ops-Cleanup Temporary&quot; ,  
$Profile.Name &lt;&gt; &quot;IM_Custom Sys Admin&quot; 
) , 

/* fire on resubmits when resubmit stage != resubmitted */ 
AND( 
ISPICKVAL(PRIORVALUE(Appeal_Stage__c), &quot;Denied&quot; ), 
NOT(ISPICKVAL(Appeal_Stage__c, &quot;Resubmitted&quot;)) 
) 
)</errorConditionFormula>
    <errorMessage>Only commissions and finance reps are allowed to change the appeal stage.</errorMessage>
</ValidationRule>