force-app/main/default/objects/Appeal__c/validationRules/Denied_Requests_Must_have_a_Reject_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Denied_Requests_Must_have_a_Reject_Code</fullName>
    <active>true</active>
    <description>a denied appeal must have a reject code</description>
    <errorConditionFormula>AND( 
ISCHANGED(Appeal_Stage__c), 
ISPICKVAL(Appeal_Stage__c, &quot;Denied&quot;), 
ISBLANK(TEXT( Commissions_Accounting_Reject_Code__c )) 
)</errorConditionFormula>
    <errorMessage>Denied requests must have a reject code.</errorMessage>
</ValidationRule>