force-app/main/default/objects/Appeal__c/listViews/Admin_View_Wilson.listView-meta.xml
<ListView>
    <fullName>Admin_View_Wilson</fullName>
    <columns>Opportunity_Total_Annual_Revenue__c</columns>
    <columns>Commissions_Accounting_Reject_Code__c</columns>
    <columns>NAME</columns>
    <columns>Appeal_Stage__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Service_Line_Commission_Category__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Appeal_Unique_ID__c</columns>
    <columns>Accepted_Date__c</columns>
    <columns>Denied_Date__c</columns>
    <columns>Up_Sell_Account_ID__c</columns>
    <columns>Assigned_Commission_Rep__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Appeal_Reference_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appeal_Stage__c</field>
        <operation>notEqual</operation>
        <value>Accepted</value>
    </filters>
    <filters>
        <field>Appeal_Stage__c</field>
        <operation>notEqual</operation>
        <value>,Accepted,Denied,No Action Necessary,Already being processed</value>
    </filters>
    <label>Admin View - Wilson</label>
    <language>en_US</language>
    <sharedTo>
        <group>Commission_Appeal_Access</group>
    </sharedTo>
</ListView>