force-app/main/default/objects/Appeal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appeal_Reason__c</columns>
    <columns>Appeal_Stage__c</columns>
    <columns>Assigned_Commission_Rep__c</columns>
    <columns>Assigned_Finance_Rep__c</columns>
    <columns>Commissions_Calendar_Period__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Appeal_Unique_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>Commission_Appeal_Access</group>
    </sharedTo>
</ListView>