force-app/main/default/objects/Appeal__c/listViews/Jeremy_Leister_View.listView-meta.xml
<ListView>
    <fullName>Jeremy_Leister_View</fullName>
    <columns>NAME</columns>
    <columns>Appeal_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Appeal_Unique_ID__c</columns>
    <columns>Accepted_Date__c</columns>
    <columns>Denied_Date__c</columns>
    <columns>Up_Sell_Account_ID__c</columns>
    <columns>Assigned_Commission_Rep__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Appeal_Reference_ID__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Commission_Rep__c</field>
        <operation>equals</operation>
        <value>Jeremy Leister</value>
    </filters>
    <label>Jeremy Leister View</label>
    <language>en_US</language>
    <sharedTo>
        <group>Commission_Appeal_Access</group>
    </sharedTo>
</ListView>