force-app/main/default/objects/Appeal__c/listViews/My_Appeals.listView-meta.xml
<ListView>
    <fullName>My_Appeals</fullName>
    <columns>NAME</columns>
    <columns>Appeal_Stage__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Appeal_Unique_ID__c</columns>
    <columns>Accepted_Date__c</columns>
    <columns>Denied_Date__c</columns>
    <columns>Up_Sell_Account_ID__c</columns>
    <columns>Assigned_Commission_Rep__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Appeal_Reference_ID__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Appeals</label>
    <language>en_US</language>
    <sharedTo>
        <group>NAAllUsers</group>
    </sharedTo>
</ListView>