force-app/main/default/objects/Appeal__c/listViews/Resubmitted.listView-meta.xml
<ListView>
    <fullName>Resubmitted</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appeal_Stage__c</field>
        <operation>equals</operation>
        <value>Resubmitted</value>
    </filters>
    <label>Resubmitted</label>
    <language>en_US</language>
    <sharedTo>
        <group>Commission_Appeal_Access</group>
    </sharedTo>
</ListView>