force-app/main/default/objects/Appeal__c/listViews/Unassigned.listView-meta.xml
<ListView>
    <fullName>Unassigned</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Commission_Rep__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Assigned_Finance_Rep__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned</label>
    <language>en_US</language>
    <sharedTo>
        <group>Commission_Appeal_Access</group>
    </sharedTo>
</ListView>